Move back-to-top button higher to avoid OpenWidget overlap

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     position: fixed;
     display: none;
     right: 45px;
-    bottom: 45px;
+    bottom: 120px;
     z-index: 99;
 }
 
